--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "bootstrap": "^5.3.0-alpha1",
+    "express": "^4.18.2",
+    "moment": "^2.29.4"
   }
 }
