--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.3",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.3.0-alpha1",
     "express": "^4.18.2",
